--- a/provisioning/servers_list.yml
+++ b/provisioning/servers_list.yml
@@ -13,30 +13,44 @@
   ansible_version: "2.9.7"
   ansible_compatibility_mode: "2.0"
 
-# - vagrant_box_host: "vg-foremansrv02"
-#   vagrant_box: "bento/centos-8.0"
-#   vbox_name: "vbox-foremansrv02"
-#   vbox_ram: 4096
-#   vbox_cpu: 2
-#   network_type: "private_network"
-#   vagrant_box_ip: 192.168.18.10
-#   guest_port: 1234
-#   host_port: 1234
-#   server_bootstrap: "provisioning/deploy.yml"
-#   shell_provision: "provisioning/bootstrap.sh"
-#   ansible_version: "2.9.7"
-#   ansible_compatibility_mode: "2.0"
+- vagrant_box_host: "vg-foremansrv02"
+  vagrant_box: "bento/centos-8.1"
+  vbox_name: "vbox-foremansrv02"
+  vbox_ram: 4096
+  vbox_cpu: 2
+  network_type: "private_network"
+  vagrant_box_ip: 192.168.18.10
+  guest_port: 1234
+  host_port: 1234
+  server_bootstrap: "provisioning/deploy.yml"
+  shell_provision: "provisioning/bootstrap.sh"
+  ansible_version: "2.9.7"
+  ansible_compatibility_mode: "2.0"
 
-# - vagrant_box_host: "vg-docker-03"
-#   vagrant_box: "bento/ubuntu-19.10"
-#   vbox_name: "vbox-docker-03"
-#   vbox_ram: 4096
-#   vbox_cpu: 2
-#   network_type: "private_network"
-#   vagrant_box_ip: 192.168.18.11
-#   guest_port: 1235
-#   host_port: 1235
-#   server_bootstrap: "provisioning/deploy.yml"
-#   shell_provision: "provisioning/bootstrap.sh"
-#   ansible_version: "2.9.2" #ubuntu
-#   ansible_compatibility_mode: "2.0"
+- vagrant_box_host: "vg-foremansrv03"
+  vagrant_box: "bento/ubuntu-20.04"
+  vbox_name: "vbox-foremansrv03"
+  vbox_ram: 4096
+  vbox_cpu: 2
+  network_type: "private_network"
+  vagrant_box_ip: 192.168.18.11
+  guest_port: 1235
+  host_port: 1235
+  server_bootstrap: "provisioning/deploy.yml"
+  shell_provision: "provisioning/bootstrap.sh"
+  ansible_version: "2.9.2" #ubuntu
+  ansible_compatibility_mode: "2.0"
+
+- vagrant_box_host: "vg-foremansrv04"
+  vagrant_box: "bento/debian-9.12"
+  vbox_name: "vbox-foremansrv04"
+  vbox_ram: 4096
+  vbox_cpu: 2
+  network_type: "private_network"
+  vagrant_box_ip: 192.168.18.12
+  guest_port: 1235
+  host_port: 1235
+  server_bootstrap: "provisioning/deploy.yml"
+  shell_provision: "provisioning/bootstrap.sh"
+  ansible_version: "2.9.2" #ubuntu
+  ansible_compatibility_mode: "2.0"
