--- a/.travis.yml
+++ b/.travis.yml
@@ -171,19 +171,19 @@ matrix:
     #     - deactivate
 
 
-    - name: "Python 2.7 on xenial amd64"
-      dist: xenial
-      language: python
-      python: 2.7
-      before_install:
-        - pip install virtualenv
-        - virtualenv -p $(which python2) ~venvpy2
-        - source ~venvpy2/bin/activate
-      <<: *fleet_install_tasks
-      <<: *fleet_script_tasks
-      <<: *fleet_script_vagrant_tasks
-      after_success:
-        - deactivate
+    # - name: "Python 2.7 on xenial amd64"
+    #   dist: xenial
+    #   language: python
+    #   python: 2.7
+    #   before_install:
+    #     - pip install virtualenv
+    #     - virtualenv -p $(which python2) ~venvpy2
+    #     - source ~venvpy2/bin/activate
+    #   <<: *fleet_install_tasks
+    #   <<: *fleet_script_tasks
+    #   <<: *fleet_script_vagrant_tasks
+    #   after_success:
+    #     - deactivate
 
     # - name: "Python 3.7 on xenial arm64"
     #   os: linux
