--- a/provisioning/deploy.yml
+++ b/provisioning/deploy.yml
@@ -1,22 +1,24 @@
 ---
-- name: "Boot all hosts"
-  gather_facts: true
-  hosts:  all
-  become: yes
-  vars:
-    add_host_entries: true
-    add_resolv_entries: true
-  pre_tasks:
-  - name: "Setting hostname"
-    shell: "hostnamectl set-hostname {{ inventory_hostname }}"
-  roles:
-    - common
-
-# - name: "Install docker-ce and docker-compose-ce"
+# - name: "Boot all hosts"
 #   gather_facts: true
-#   hosts:  vg-foremansrv01
+#   hosts:  all
 #   become: yes
 #   vars:
-#     foreman_db_pass: supersecret
+#     add_host_entries: true
+#     add_resolv_entries: true
+#   pre_tasks:
+#   - name: "Setting hostname"
+#     shell: "hostnamectl set-hostname {{ inventory_hostname }}"
 #   roles:
-#     - foreman
+#     - common
+
+- name: "Install foreman"
+  gather_facts: true
+  hosts:  vg-foremansrv01
+  become: yes
+  vars:
+    foreman_db_pass: supersecret
+  roles:
+    - common
+    - foreman
+
