--- a/.travis.yml
+++ b/.travis.yml
@@ -46,8 +46,8 @@ matrix:
     #     - sudo vagrant destroy -f # required to run Vagrantfile template        
     #     - sudo rm Vagrantfile # required to run Vagrantfile template           
 
-    - name: "opennebula topology provision bash Python 3.7 on bionic amd64"
-      dist: bionic
+    - name: "build yocto image Python 3.7 on yocto amd64 trusty"
+      dist: trusty
       arch: amd64
       language: python
       python: 3.7
@@ -57,10 +57,25 @@ matrix:
         - source ~venvpy3/bin/activate
         - pip install -r requirements.txt
       script:
-        - sudo make deploy-vagrant
-        - sudo make deploy-libvirt
-        - sudo make deploy-topology-opennebula
+        - sudo make deploy-yocto
       after_success:
         - deactivate
-        - sudo vagrant destroy -f # required to run Vagrantfile template        
-        - sudo rm Vagrantfile # required to run Vagrantfile template          
+
+    # - name: "opennebula topology provision bash Python 3.7 on bionic amd64"
+    #   dist: bionic
+    #   arch: amd64
+    #   language: python
+    #   python: 3.7
+    #   before_install:
+    #     - pip3 install virtualenv
+    #     - virtualenv -p $(which python3) ~venvpy3
+    #     - source ~venvpy3/bin/activate
+    #     - pip install -r requirements.txt
+    #   script:
+    #     - sudo make deploy-vagrant
+    #     - sudo make deploy-libvirt
+    #     - sudo make deploy-topology-opennebula
+    #   after_success:
+    #     - deactivate
+    #     - sudo vagrant destroy -f # required to run Vagrantfile template        
+    #     - sudo rm Vagrantfile # required to run Vagrantfile template          
