--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,22 @@ matrix:
     #     - sudo vagrant destroy -f # required to run Vagrantfile template        
     #     - sudo rm Vagrantfile # required to run Vagrantfile template           
 
-    - name: "build yocto image Python on yocto amd64 trusty"
+    - name: "build yocto latest revision Python on yocto amd64 trusty"
+      dist: trusty
+      arch: amd64
+      language: python
+      # python: 3.7
+      before_install:
+        - pip3 install virtualenv
+        - virtualenv -p $(which python3) ~venvpy3
+        - source ~venvpy3/bin/activate
+        - pip install -r requirements.txt
+      script:
+        - sudo make deploy-yocto-latest
+      after_success:
+        - deactivate
+
+    - name: "build yocto release tag Python on yocto amd64 trusty"
       dist: trusty
       arch: amd64
       language: python
